add_subdirectory(xc7a200t-fig1)
add_subdirectory(xc7a200t-fig2-1600)
add_subdirectory(xc7a200t-fig2-3200)
add_subdirectory(xc7a200t-fig2-6400)
add_subdirectory(xc7a200t-fig2-12800)
add_subdirectory(xc7a200t-doblink-pblock-2)
add_subdirectory(xc7a200t-doblink-pblock-3)
add_subdirectory(xc7a200t-doblink-pblock-4)
add_subdirectory(xc7a200t-doblink-pblock-5)
add_subdirectory(xc7a200t-doblink-pblock-6)
add_subdirectory(xc7a200t-doblink-pblock-7)
add_subdirectory(xc7a200t-doblink-pblock-8)
add_subdirectory(xc7a200t-doblink-pblock-9)
add_subdirectory(xc7a200t-doblink-pblock-10)
add_subdirectory(xc7a200t-doblink-pblock-11)
add_subdirectory(xc7a200t-doblink-pblock-12)
add_subdirectory(xc7a200t-doblink-pblock-13)
add_subdirectory(xc7a200t-doblink-overlay)
