add_subdirectory(xc7a200t-doblink-12-pblock-2)
add_subdirectory(xc7a200t-doblink-12-pblock-3)
add_subdirectory(xc7a200t-doblink-12-pblock-4)
add_subdirectory(xc7a200t-doblink-12-pblock-5)
add_subdirectory(xc7a200t-doblink-12-pblock-6)
add_subdirectory(xc7a200t-doblink-12-pblock-7)
add_subdirectory(xc7a200t-doblink-12-pblock-8)
add_subdirectory(xc7a200t-doblink-12-pblock-9)
add_subdirectory(xc7a200t-doblink-12-pblock-10)
add_subdirectory(xc7a200t-doblink-12-pblock-11)
add_subdirectory(xc7a200t-doblink-12-pblock-12)
add_subdirectory(xc7a200t-doblink-12-pblock-13)
add_subdirectory(xc7a200t-doblink-12-overlay)
